--- a/css/index.less
+++ b/css/index.less
@@ -22,11 +22,6 @@ body {
     padding: 0 10rem/@bg 0rem/@bg 10rem/@bg;
 }
 
-h4 {
-    height: 80rem/@bg;
-    line-height: 80rem/@bg;
-}
-
 ul {
     list-style: none;
     padding-left: 20rem/@bg;
@@ -85,4 +80,9 @@ li::before {
         border-radius: 50%;
         cursor:pointer
     }
+}
+
+*::-webkit-media-controls-start-playback-button {
+display: none!important;
+-webkit-appearance: none;
 }
